audio model draft done

--- a/projects/MLRecap/torch/audio.ipynb
+++ b/projects/MLRecap/torch/audio.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e33d83fc",
    "metadata": {},
    "outputs": [],
@@ -79,40 +79,7 @@
     "        plt.show()\n",
     "    \n",
     "    plt.close(fig)\n",
-    "\n",
-    "\n",
-    "from pathlib import Path\n",
-    "import torchaudio\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from torchvision import transforms  \n",
-    "\n",
-    "class AudioFolder(Dataset):\n",
-    "    def __init__(self, root, transform=None, target_transform=None,\n",
-    "                 extensions=(\".wav\", \".flac\", \".mp3\")):\n",
-    "        self.root = Path(root)\n",
-    "        self.transform = transform\n",
-    "        self.target_transform = target_transform\n",
-    "        self.extensions = extensions\n",
-    "\n",
-    "        # crawl sub-dirs and record (path, class_idx)\n",
-    "        self.classes = sorted({p.parent.name for p in self.root.rglob(\"*\") if p.suffix in extensions})\n",
-    "        self.class_to_idx = {c: i for i, c in enumerate(self.classes)}\n",
-    "        self.samples = [(p, self.class_to_idx[p.parent.name])\n",
-    "                        for p in self.root.rglob(\"*\") if p.suffix in extensions]\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.samples)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        path, label = self.samples[idx]\n",
-    "        waveform, sr = torchaudio.load(path)\n",
-    "\n",
-    "        if self.transform:\n",
-    "            waveform = self.transform(waveform)\n",
-    "        if self.target_transform:\n",
-    "            label = self.target_transform(label)\n",
-    "\n",
-    "        return waveform, sr, label\n"
+    "\n"
    ]
   },
   {
@@ -474,181 +441,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "ff36d524",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'fft': [array([-1.126588  -0.00000000e+00j,  0.4247836 -5.03125012e-01j,\n",
-       "          0.24272755+1.01316226e+00j, -0.4301207 -1.18257236e+00j,\n",
-       "          0.9638796 +5.18317819e-01j, -0.2528817 -7.28531182e-02j,\n",
-       "         -1.1351874 +3.57527494e-01j,  1.1298645 -5.35308599e-01j,\n",
-       "         -0.54010427-7.38125965e-02j,  0.46211696+5.28714776e-01j,\n",
-       "         -0.6133466 -2.50133604e-01j,  0.26928198-1.44113645e-01j,\n",
-       "          0.09892043+4.43907678e-01j,  0.08139782-8.05302024e-01j,\n",
-       "         -0.1365584 +8.37355256e-01j, -0.22593808-3.99529934e-03j,\n",
-       "          0.50840265-4.15628344e-01j, -0.5643153 +1.43535465e-01j,\n",
-       "          0.02653468-2.64616847e-01j,  0.773708  -8.60319138e-02j,\n",
-       "         -0.25838834+4.62328106e-01j, -0.6433812 +5.45361638e-02j,\n",
-       "          0.20733213-3.17745119e-01j,  0.11950779+7.90340304e-02j,\n",
-       "          0.34890455+1.79395080e-04j, -0.6444595 -7.52464235e-02j,\n",
-       "          0.97470796+3.59403342e-01j, -1.0675857 -8.60603452e-02j,\n",
-       "          0.73171175-3.86446655e-01j, -0.71747214+1.47321314e-01j,\n",
-       "          0.5759678 +8.40252638e-02j, -0.02642706-6.99163079e-02j,\n",
-       "         -0.29924187+2.39537120e-01j,  0.9013447 -7.29886070e-02j,\n",
-       "         -1.8293048 -3.36628407e-02j,  1.7746468 -2.23784745e-01j,\n",
-       "         -1.1045921 +1.40148014e-01j,  0.730152  -2.39278078e-02j,\n",
-       "         -0.21190903-1.65888846e-01j, -0.31418785+5.77465057e-01j,\n",
-       "          0.4178019 -4.33989763e-01j, -0.1983731 +2.08010674e-02j,\n",
-       "         -0.0269161 -1.06547087e-01j,  0.49664032+5.14441013e-01j,\n",
-       "         -0.92093205-7.66421974e-01j,  0.87781024+3.84427637e-01j,\n",
-       "         -0.90121734-7.24288821e-03j,  0.46958432+2.13203251e-01j,\n",
-       "         -0.15670003-1.34512439e-01j,  0.50771606-1.57037571e-01j,\n",
-       "         -0.16920707+9.65014100e-02j, -0.42579055+1.17872536e-01j,\n",
-       "          0.15684994+1.15414307e-01j,  0.1536431 -5.02130151e-01j,\n",
-       "         -0.17560115-1.80594355e-01j,  0.2758463 +7.33394504e-01j,\n",
-       "          0.03135882-3.18644494e-01j,  0.0302012 +1.03471741e-01j,\n",
-       "         -0.47562522-1.60939753e-01j,  0.45671025+4.04226243e-01j,\n",
-       "         -0.57774556-5.20883322e-01j,  0.74601805-1.44025728e-01j,\n",
-       "         -0.73828727+8.25310707e-01j,  0.41599032-6.40439868e-01j,\n",
-       "         -0.20575449+6.94763362e-02j,  0.41297677+2.30521724e-01j,\n",
-       "          0.37240642-1.15752727e-01j, -1.5373658 -2.53676951e-01j,\n",
-       "          1.0564588 +1.07808089e+00j,  0.06885222-1.16371989e+00j,\n",
-       "         -0.3322999 +1.53459072e-01j,  0.29834813+3.10301363e-01j,\n",
-       "         -0.08845578-4.97589916e-01j, -0.18413031-7.87326097e-02j,\n",
-       "         -0.05295154+9.70945120e-01j,  0.08735562-5.67355871e-01j,\n",
-       "          0.29473352-2.00829819e-01j, -0.2342812 +7.17775822e-01j,\n",
-       "         -0.34781602-7.15815961e-01j,  0.5367633 +1.47376195e-01j,\n",
-       "         -0.39872319+4.61145490e-02j,  0.40826854+4.13376272e-01j,\n",
-       "          0.2629027 -4.20593470e-01j, -1.0105784 -5.80190182e-01j,\n",
-       "          0.8733367 +8.96601975e-01j, -0.43599343+1.55062705e-01j,\n",
-       "          0.2538054 -2.27061361e-01j, -0.08111535-5.20789742e-01j,\n",
-       "         -0.32100925+3.35344374e-01j,  0.72009814-3.58179629e-01j,\n",
-       "         -0.63026583+5.88171482e-01j,  0.48999885-6.99397683e-01j,\n",
-       "         -0.7094034 +1.06684828e+00j,  0.50538254-7.94378459e-01j,\n",
-       "         -0.38697517+3.12446892e-01j,  0.08137614+1.35422677e-01j,\n",
-       "          0.44195125+6.18664175e-03j,  0.25599483-1.28946567e+00j,\n",
-       "         -1.3677623 +1.15176237e+00j,  1.390074  -3.58005464e-02j,\n",
-       "         -0.63365126+3.51201892e-01j,  0.17064542-1.03802752e+00j,\n",
-       "          0.08569887+1.01080275e+00j, -0.6261263 -5.99022388e-01j,\n",
-       "          0.35174614+1.36877581e-01j,  1.0817432 +1.14345133e-01j,\n",
-       "         -1.2837214 +4.05758947e-01j, -0.15653712-1.10316610e+00j,\n",
-       "          0.77889127+1.04049087e+00j, -0.06142852-6.83887184e-01j,\n",
-       "         -0.40052933+4.58414435e-01j,  0.05063495-2.26124257e-01j,\n",
-       "          0.23324442-4.94264096e-01j,  0.17010027+8.32757354e-01j,\n",
-       "         -0.26437128-3.23437780e-01j, -0.57394564+9.27367508e-02j,\n",
-       "          0.8126221 +3.36995184e-01j, -0.42097795-5.02934337e-01j,\n",
-       "          0.1320363 -3.77639383e-01j,  0.65889144+8.37751746e-01j,\n",
-       "         -1.5249168 -2.12124586e-01j,  1.1631505 -1.22467542e+00j,\n",
-       "          0.05870849+1.88773775e+00j, -0.286507  -1.01095450e+00j,\n",
-       "         -0.02369377+5.73707521e-02j, -0.39694375+2.64513344e-01j,\n",
-       "          0.6389383 -4.21930641e-01j, -0.43378198+6.70893610e-01j,\n",
-       "          0.35381207-0.00000000e+00j, -0.43378198-6.70893610e-01j,\n",
-       "          0.6389383 +4.21930641e-01j, -0.39694375-2.64513344e-01j,\n",
-       "         -0.02369377-5.73707521e-02j, -0.286507  +1.01095450e+00j,\n",
-       "          0.05870849-1.88773775e+00j,  1.1631505 +1.22467542e+00j,\n",
-       "         -1.5249168 +2.12124586e-01j,  0.65889144-8.37751746e-01j,\n",
-       "          0.1320363 +3.77639383e-01j, -0.42097795+5.02934337e-01j,\n",
-       "          0.8126221 -3.36995184e-01j, -0.57394564-9.27367508e-02j,\n",
-       "         -0.26437128+3.23437780e-01j,  0.17010027-8.32757354e-01j,\n",
-       "          0.23324442+4.94264096e-01j,  0.05063495+2.26124257e-01j,\n",
-       "         -0.40052933-4.58414435e-01j, -0.06142852+6.83887184e-01j,\n",
-       "          0.77889127-1.04049087e+00j, -0.15653712+1.10316610e+00j,\n",
-       "         -1.2837214 -4.05758947e-01j,  1.0817432 -1.14345133e-01j,\n",
-       "          0.35174614-1.36877581e-01j, -0.6261263 +5.99022388e-01j,\n",
-       "          0.08569887-1.01080275e+00j,  0.17064542+1.03802752e+00j,\n",
-       "         -0.63365126-3.51201892e-01j,  1.390074  +3.58005464e-02j,\n",
-       "         -1.3677623 -1.15176237e+00j,  0.25599483+1.28946567e+00j,\n",
-       "          0.44195125-6.18664175e-03j,  0.08137614-1.35422677e-01j,\n",
-       "         -0.38697517-3.12446892e-01j,  0.50538254+7.94378459e-01j,\n",
-       "         -0.7094034 -1.06684828e+00j,  0.48999885+6.99397683e-01j,\n",
-       "         -0.63026583-5.88171482e-01j,  0.72009814+3.58179629e-01j,\n",
-       "         -0.32100925-3.35344374e-01j, -0.08111535+5.20789742e-01j,\n",
-       "          0.2538054 +2.27061361e-01j, -0.43599343-1.55062705e-01j,\n",
-       "          0.8733367 -8.96601975e-01j, -1.0105784 +5.80190182e-01j,\n",
-       "          0.2629027 +4.20593470e-01j,  0.40826854-4.13376272e-01j,\n",
-       "         -0.39872319-4.61145490e-02j,  0.5367633 -1.47376195e-01j,\n",
-       "         -0.34781602+7.15815961e-01j, -0.2342812 -7.17775822e-01j,\n",
-       "          0.29473352+2.00829819e-01j,  0.08735562+5.67355871e-01j,\n",
-       "         -0.05295154-9.70945120e-01j, -0.18413031+7.87326097e-02j,\n",
-       "         -0.08845578+4.97589916e-01j,  0.29834813-3.10301363e-01j,\n",
-       "         -0.3322999 -1.53459072e-01j,  0.06885222+1.16371989e+00j,\n",
-       "          1.0564588 -1.07808089e+00j, -1.5373658 +2.53676951e-01j,\n",
-       "          0.37240642+1.15752727e-01j,  0.41297677-2.30521724e-01j,\n",
-       "         -0.20575449-6.94763362e-02j,  0.41599032+6.40439868e-01j,\n",
-       "         -0.73828727-8.25310707e-01j,  0.74601805+1.44025728e-01j,\n",
-       "         -0.57774556+5.20883322e-01j,  0.45671025-4.04226243e-01j,\n",
-       "         -0.47562522+1.60939753e-01j,  0.0302012 -1.03471741e-01j,\n",
-       "          0.03135882+3.18644494e-01j,  0.2758463 -7.33394504e-01j,\n",
-       "         -0.17560115+1.80594355e-01j,  0.1536431 +5.02130151e-01j,\n",
-       "          0.15684994-1.15414307e-01j, -0.42579055-1.17872536e-01j,\n",
-       "         -0.16920707-9.65014100e-02j,  0.50771606+1.57037571e-01j,\n",
-       "         -0.15670003+1.34512439e-01j,  0.46958432-2.13203251e-01j,\n",
-       "         -0.90121734+7.24288821e-03j,  0.87781024-3.84427637e-01j,\n",
-       "         -0.92093205+7.66421974e-01j,  0.49664032-5.14441013e-01j,\n",
-       "         -0.0269161 +1.06547087e-01j, -0.1983731 -2.08010674e-02j,\n",
-       "          0.4178019 +4.33989763e-01j, -0.31418785-5.77465057e-01j,\n",
-       "         -0.21190903+1.65888846e-01j,  0.730152  +2.39278078e-02j,\n",
-       "         -1.1045921 -1.40148014e-01j,  1.7746468 +2.23784745e-01j,\n",
-       "         -1.8293048 +3.36628407e-02j,  0.9013447 +7.29886070e-02j,\n",
-       "         -0.29924187-2.39537120e-01j, -0.02642706+6.99163079e-02j,\n",
-       "          0.5759678 -8.40252638e-02j, -0.71747214-1.47321314e-01j,\n",
-       "          0.73171175+3.86446655e-01j, -1.0675857 +8.60603452e-02j,\n",
-       "          0.97470796-3.59403342e-01j, -0.6444595 +7.52464235e-02j,\n",
-       "          0.34890455-1.79395080e-04j,  0.11950779-7.90340304e-02j,\n",
-       "          0.20733213+3.17745119e-01j, -0.6433812 -5.45361638e-02j,\n",
-       "         -0.25838834-4.62328106e-01j,  0.773708  +8.60319138e-02j,\n",
-       "          0.02653468+2.64616847e-01j, -0.5643153 -1.43535465e-01j,\n",
-       "          0.50840265+4.15628344e-01j, -0.22593808+3.99529934e-03j,\n",
-       "         -0.1365584 -8.37355256e-01j,  0.08139782+8.05302024e-01j,\n",
-       "          0.09892043-4.43907678e-01j,  0.26928198+1.44113645e-01j,\n",
-       "         -0.6133466 +2.50133604e-01j,  0.46211696-5.28714776e-01j,\n",
-       "         -0.54010427+7.38125965e-02j,  1.1298645 +5.35308599e-01j,\n",
-       "         -1.1351874 -3.57527494e-01j, -0.2528817 +7.28531182e-02j,\n",
-       "          0.9638796 -5.18317819e-01j, -0.4301207 +1.18257236e+00j,\n",
-       "          0.24272755-1.01316226e+00j,  0.4247836 +5.03125012e-01j],\n",
-       "        dtype=complex64)],\n",
-       " 'magnitude': [array([1.126588  , 0.6584647 , 1.0418322 , 1.2583644 , 1.0944026 ,\n",
-       "         0.26316676, 1.1901581 , 1.2502595 , 0.5451247 , 0.70220464,\n",
-       "         0.6623903 , 0.30542025, 0.45479587, 0.8094053 , 0.84841734,\n",
-       "         0.2259734 , 0.65667355, 0.5822836 , 0.2659439 , 0.7784764 ,\n",
-       "         0.52963364, 0.6456885 , 0.37940556, 0.14327766, 0.34890458,\n",
-       "         0.64883745, 1.0388582 , 1.0710489 , 0.82749206, 0.73244095,\n",
-       "         0.58206457, 0.07474409, 0.3833063 , 0.90429515, 1.8296145 ,\n",
-       "         1.7887007 , 1.1134474 , 0.730544  , 0.2691181 , 0.6574039 ,\n",
-       "         0.6024164 , 0.19946069, 0.10989431, 0.71505326, 1.1981313 ,\n",
-       "         0.9582982 , 0.9012464 , 0.51571804, 0.20651513, 0.53144747,\n",
-       "         0.19479106, 0.44180486, 0.19473666, 0.52511036, 0.251893  ,\n",
-       "         0.78355515, 0.32018384, 0.1077892 , 0.5021165 , 0.60990417,\n",
-       "         0.77788776, 0.7597936 , 1.1073418 , 0.7636826 , 0.21716784,\n",
-       "         0.47295886, 0.38998106, 1.5581547 , 1.5094249 , 1.165755  ,\n",
-       "         0.36602312, 0.4304632 , 0.5053911 , 0.20025684, 0.9723879 ,\n",
-       "         0.57404155, 0.35665175, 0.75504285, 0.7958445 , 0.55662787,\n",
-       "         0.40138105, 0.5810019 , 0.4960007 , 1.1652851 , 1.2516438 ,\n",
-       "         0.46274692, 0.34054965, 0.5270689 , 0.46422276, 0.8042599 ,\n",
-       "         0.8620793 , 0.85396487, 1.2811786 , 0.941514  , 0.4973659 ,\n",
-       "         0.15799169, 0.44199455, 1.3146312 , 1.7881081 , 1.390535  ,\n",
-       "         0.7244699 , 1.0519606 , 1.0144292 , 0.8665229 , 0.37743983,\n",
-       "         1.0877699 , 1.3463213 , 1.1142169 , 1.2997279 , 0.68664044,\n",
-       "         0.6087426 , 0.23172414, 0.54653454, 0.84995234, 0.41773698,\n",
-       "         0.5813894 , 0.8797274 , 0.65586996, 0.4000564 , 1.065817  ,\n",
-       "         1.5396    , 1.6890082 , 1.8886505 , 1.050769  , 0.06207091,\n",
-       "         0.47700274, 0.7656812 , 0.79891497, 0.35381207], dtype=float32)]}"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "global_v"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "7d6e2152",
    "metadata": {},
@@ -657,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c4911ee1",
    "metadata": {},
    "outputs": [
@@ -667,7 +459,8 @@
      "text": [
       "12.4\n",
       "90100\n",
-      "True\n"
+      "True\n",
+      "['ffmpeg', 'sox', 'soundfile']\n"
      ]
     }
    ],
