Polished blogs, added RL

--- a/_posts/2025-10-30-neurIPS.md
+++ b/_posts/2025-10-30-neurIPS.md
@@ -2,7 +2,7 @@
 layout: post
 title: "BEHAVIOR Challenge @ NeurIPS 2025"
 date: 2025-10-30
-categories: robotics
+categories: [machine-learning, computer-vision]
 author: Vladimir Ershov
 description: "Initial review"
 ---
