fix style for pros cons

--- a/_posts/2025-10-06-rl-recap.md
+++ b/_posts/2025-10-06-rl-recap.md
@@ -105,28 +105,34 @@ def softmax_action(q_values, temperature=1.0):
 
 **Key Difference:**
 
-<div class="pros-cons-grid">
-  <div class="pros">
-    <h4>✓ On-Policy (SARSA, PPO, A3C)</h4>
-    <ul>
-      <li>More stable training</li>
-      <li>Simpler to implement</li>
-      <li>Better for continuous control</li>
-      <li>Direct policy improvement</li>
-    </ul>
-    <p><strong>Trade-off:</strong> Less sample efficient (can't reuse old data)</p>
-  </div>
+<div class="pros-cons-grid" markdown="1">
 
-  <div class="cons">
-    <h4>⚡ Off-Policy (Q-Learning, DQN, DDPG)</h4>
-    <ul>
-      <li>Highly sample efficient</li>
-      <li>Can use replay buffers</li>
-      <li>Reuses old experiences</li>
-      <li>Better for discrete actions</li>
-    </ul>
-    <p><strong>Trade-off:</strong> Can be unstable, requires careful tuning</p>
-  </div>
+<div class="pros" markdown="1">
+
+#### ✓ On-Policy (SARSA, PPO, A3C)
+
+- More stable training
+- Simpler to implement
+- Better for continuous control
+- Direct policy improvement
+
+**Trade-off:** Less sample efficient (can't reuse old data)
+
+</div>
+
+<div class="cons" markdown="1">
+
+#### ⚡ Off-Policy (Q-Learning, DQN, DDPG)
+
+- Highly sample efficient
+- Can use replay buffers
+- Reuses old experiences
+- Better for discrete actions
+
+**Trade-off:** Can be unstable, requires careful tuning
+
+</div>
+
 </div>
 
 **Concrete example:**
@@ -654,28 +660,34 @@ reward = +10
 
 **When to use which:**
 
-<div class="pros-cons-grid">
-  <div class="pros">
-    <h4>✓ Value-Based (Q-Learning, DQN)</h4>
-    <ul>
-      <li>Sample efficient with replay buffer</li>
-      <li>Off-policy learning capability</li>
-      <li>Good for discrete action spaces</li>
-      <li>Deterministic policies</li>
-    </ul>
-    <p><strong>Best for:</strong> Data-scarce environments, robotics, expensive simulations</p>
-  </div>
+<div class="pros-cons-grid" markdown="1">
 
-  <div class="cons">
-    <h4>⚡ Policy-Based (REINFORCE, PPO)</h4>
-    <ul>
-      <li>Handles continuous actions naturally</li>
-      <li>Can learn stochastic policies</li>
-      <li>Better for high-dimensional actions</li>
-      <li>Direct policy optimization</li>
-    </ul>
-    <p><strong>Best for:</strong> Continuous control, high-dimensional action spaces, stochastic policies</p>
-  </div>
+<div class="pros" markdown="1">
+
+#### ✓ Value-Based (Q-Learning, DQN)
+
+- Sample efficient with replay buffer
+- Off-policy learning capability
+- Good for discrete action spaces
+- Deterministic policies
+
+**Best for:** Data-scarce environments, robotics, expensive simulations
+
+</div>
+
+<div class="cons" markdown="1">
+
+#### ⚡ Policy-Based (REINFORCE, PPO)
+
+- Handles continuous actions naturally
+- Can learn stochastic policies
+- Better for high-dimensional actions
+- Direct policy optimization
+
+**Best for:** Continuous control, high-dimensional action spaces, stochastic policies
+
+</div>
+
 </div>
 
 ---
