--- a/projects/MLRecap/torch/RL/simple_rl_dqn.ipynb
+++ b/projects/MLRecap/torch/RL/simple_rl_dqn.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "9e5df110",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
     "\n",
     "        agent.replay()\n",
     "\n",
-    "        reward = reward if not done else -10 # why this?\n",
+    "        reward = reward if not done else -10 \n",
     "\n",
     "        state = next_state\n",
     "        score += reward\n",
